force-app/main/default/objects/SwiftSign_File__c/SwiftSign_File__c.object-meta.xml
<CustomObject>
    <description
  >Tracks ContentDocument associations and ordering for SwiftSign transactions.</description>
    <label>SwiftSign File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SwiftSign Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>