force-app/main/default/objects/SwiftSign_File__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Indicates whether the SwiftSign file has completed the routing workflow.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>