force-app/main/default/objects/SwiftSign_File__c/fields/Configured__c.field-meta.xml
<CustomField>
    <fullName>Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Configured</label>
    <type>Checkbox</type>
</CustomField>