force-app/main/default/objects/SwiftSign_File__c/fields/Signed_Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Signed_Content_Document_Id__c</fullName>
    <description
  >Reference to the signed Content Document generated from the guest upload workflow. Stored as Text(18) because Salesforce does not support custom Lookup fields targeting ContentDocument. Integrity enforced by Apex — do not write directly.</description>
    <inlineHelpText
  >ContentDocument ID of the signed output file. Salesforce platform does not allow a custom Lookup to ContentDocument, so this is stored as text. All writes go through SwiftSign Apex.</inlineHelpText>
    <label>Signed Content Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>