force-app/main/default/objects/SwiftSign_File__c/fields/SwiftSign_Transaction__c.field-meta.xml
<CustomField>
    <fullName>SwiftSign_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent SwiftSign Transaction</description>
    <label>SwiftSign Transaction</label>
    <referenceTo>SwiftSign_Transaction__c</referenceTo>
    <relationshipLabel>Files</relationshipLabel>
    <relationshipName>Files</relationshipName>
    <type>Lookup</type>
</CustomField>